--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+a {
+  margin: 10px;
+}
+
+.button-div {
+  margin: 10px;
+  background-color: #f3f3f3;
+  display: inline-block;
+  padding: 10px;
+  cursor: pointer;
+}
